# orbita

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PIPELINE.md  README.md  TODO.md  build.rs  linker.ld  rust-toolchain.toml  x86_64-unknown-none.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
docs/ai-implementation/: drivers.md  filesystem.md  graphics.md  interrupts.md  memory-management.md
docs/changelog/: 2025-01-18_initial_setup.md  2025-05-18_filesystems.md  2025-05-18_graphics_framebuffer_update.md  2025-05-18_usb_skeleton.md  2025-05-19_network_drivers.md  2025-05-19_network_stack_stub.md  2025-05-19_sound_drivers.md  2025-05-20_graphics_double_buffer.md  2025-06-01_disk_drivers.md
docs/development/: 01_pci_driver_plan.md  02_timer_driver_plan.md  03_filesystem_plan.md
drivers/: pci.rs  template_driver.rs
drivers/net/: e1000.rs  mod.rs  rtl8139.rs
drivers/sound/: ac97.rs  hda.rs
drivers/storage/: ahci.rs  ata.rs  mod.rs
drivers/usb/: ehci.rs  hid.rs  mass_storage.rs  mod.rs  ohci.rs  uhci.rs  xhci.rs
scripts/: build.sh  docker-build.sh  run.sh  test.sh
src/: allocator.rs  graphics.rs  graphics_accel.rs  interrupts.rs  kernel.rs  lib.rs  main.rs  memory.rs  mouse.rs  serial.rs  vga_buffer.rs  window_manager.rs
src/drivers/: mod.rs
src/fs/: ext2.rs  fat32.rs  mod.rs  orbitafs.rs  vfs.rs
src/net/: arp.rs  dhcp.rs  dns.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
tests/: basic_boot.rs  net.rs
