[package]
name = "orbita"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
raw-cpuid = "11.0"
bit_field = "0.10.2"
bitflags = "2.4"
log = { version = "0.4", default-features = false }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
vek = { version = "0.17", default-features = false, features = ["libm"] }
libm = "0.2"
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0"
embedded-graphics = { version = "0.8", default-features = false }
tinybmp = { version = "0.5", default-features = false }

[build-dependencies]
bootloader = "0.9"
bootloader-locator = "0.0.4"

[dev-dependencies]

[package.metadata.bootloader]
minimum-stack-size = 100000
